Improved the list page and added the beginnings of ajax edit.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ werkzeug
 -e svn+http://code.djangoproject.com/svn/django/trunk/#egg=django
 -e git+git://github.com/django-extensions/django-extensions.git#egg=django_extensions
 -e hg+http://bitbucket.org/offline/django-annoying/#egg=django_annoying
+-e git+git://github.com/robhudson/django-debug-toolbar.git#egg=django_debug_toolbar
