--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 werkzeug
+python-dateutil
 
 -e svn+http://code.djangoproject.com/svn/django/trunk/#egg=django
 -e git+git://github.com/django-extensions/django-extensions.git#egg=django_extensions
